[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Scripts/PokerGame.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NeonButton.tscn" type="PackedScene" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TableCard1" type="Position2D" parent="."]
position = Vector2( 240, 120 )

[node name="TableCard2" type="Position2D" parent="."]
position = Vector2( 360, 120 )

[node name="TableCard3" type="Position2D" parent="."]
position = Vector2( 480, 120 )

[node name="TableCard4" type="Position2D" parent="."]
position = Vector2( 600, 120 )

[node name="TableCard5" type="Position2D" parent="."]
position = Vector2( 720, 120 )

[node name="PlayerCard1" type="Position2D" parent="."]
position = Vector2( 540, 480 )

[node name="PlayerCard2" type="Position2D" parent="."]
position = Vector2( 420, 480 )

[node name="FoldButton" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -60.0
margin_right = -40.0
margin_bottom = -10.0
text = "FOLD"

[node name="CheckButton" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -120.0
margin_right = -40.0
margin_bottom = -70.0
text = "CHECK"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="NewGameTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="FoldButton" to="." method="_on_FoldButton_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="NewGameTimer" to="." method="_on_NewGameTimer_timeout"]
